...
  TextEditingController _locationController = TextEditingController();
  TextEditingController _bioController = TextEditingController();

  List<String> _selectedTags = [];

  List<String> _availableTags = [
    'Electricity',
    'HVAC',
    'Satelite dish',
    'Plumbing',
    'Electronics',
    'interior decoration',
  ];
  final GlobalKey<FormState> _formKey = GlobalKey<FormState>();

  bool _noSkillChosen = false;
...
                            ),
                            const SizedBox(
                              width: 20,
                            ),
                            Column(
                              children: [
                                Text("Technician",
                                    style: TextStyle(
                                      fontSize: 20,
                                      color: _borderColor2,
                                    )),
                                GestureDetector(
                                  onTap: () {
...
                            child: Column(
                              children: [
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                    labelText: "Fullname",
                                    prefixIcon: Icons.person_2_outlined,
                                    toggleText: false,
                                    controller: _fullNameController),
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                    labelText: "email",
                                    prefixIcon: Icons.email,
                                    toggleText: false,
                                    controller: _emailController),
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                    labelText: "phone",
                                    prefixIcon: Icons.phone,
                                    toggleText: false,
                                    controller: _phoneController),
                                const SizedBox(
                                  height: 15,
                                ),
                                MyTextField(
                                  labelText: "password",
                                  prefixIcon: Icons.lock_open,
                                  suffixIcon: Icons.remove_red_eye_rounded,
                                  toggleText: true,
                                  controller: _passwordController,
                                  obscureText: true,
                                ),
                                const SizedBox(
                                  height: 15,
                                ),
                                if (_user_role == "technician") ...[
                                  MyTextField(
                                      labelText: "Experience",
                                      prefixIcon: Icons.timelapse_sharp,
                                      toggleText: false,
                                      controller: _experienceController),
                                  const SizedBox(
                                    height: 15,
                                  ),
                                  MyTextField(
                                      labelText: "Education Level",
                                      prefixIcon: Icons.school,
                                      toggleText: false,
                                      controller: _educationController),
                                  const SizedBox(
                                    height: 15,
                                  ),
                                  MyTextField(
                                      labelText: "Available location",
                                      prefixIcon: Icons.location_city_outlined,
                                      toggleText: false,
                                      controller: _locationController),
                                  const SizedBox(
                                    height: 15,
                                  ),
                                  MyTextField(
                                      labelText: "Additional Bio",
                                      prefixIcon: Icons.edit,
                                      multiline: true,
                                      requiredField: false,
                                      toggleText: false,
                                      controller: _bioController),
                                  const SizedBox(
...
                                    ),
                                  ),
                                  const SizedBox(
                                    height: 15,
                                  ),
                                  MyButton(
                                      text: "Apply",
                                      onPressed: () {
                                        if (_formKey.currentState!.validate()) {
                                          if (_selectedTags.isNotEmpty) {
                                            signUpTechnician();
                                          } else {
                                            setState(() {
...
                                ],
                                if (_user_role == "customer") ...[
                                  const SizedBox(
                                    height: 15,
                                  ),
                                  MyButton(
                                      text: "signup",
                                      onPressed: (){
                                        signUpCustomer();
                                      },
                                      width: double.infinity),
                                ],
                              ],
...
                                style: TextStyle(fontSize: 20)),
                            const SizedBox(
                              width: 8,
                            ),
                            TextButton(
                                onPressed: () {
                                  context.go("/login");
                                },
                                child: Text("Login",
                                    style: TextStyle(
                                        fontSize: 20,
                                        color: Colors.purple.shade300)))
                          ],
                        )
                      ],
...
