...
                    child: const ListTile(
                      leading: Icon(
                        Icons.logout,
                        color: Colors.white,
                      ),
                      title: Text(
                        "Logout",
                        style: TextStyle(color: Colors.white),
                      ),
                    ),
                    onPressed: () async {
                      // await unlog(context);
                      ref.read(authNotifierProvider.notifier).unlog();
...
