...
                  children: [
                    SizedBox(
                      height: 100,
                      child: Image.asset('assets/logo.jpg'),
                    ),
                    Text(
                      "SkillTrade Hub",
                      style: TextStyle(
                          fontSize: 30,
                          fontWeight: FontWeight.bold,
                          color: Colors.yellow.shade900),
                    ),
                    const Text("Welcome to the hub of skills!",
...
